--- a/index.html
+++ b/index.html
@@ -8,6 +8,43 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    
+    <!-- header -->
+    <header>
+        <div class="tittle">
+            <h1><span>Re</span>Design</h1>
+        </div>
+
+        <div class="nav">
+            <a href="">Masterclass</a>
+            <a href="">Community</a>
+            <a href="">Podcast</a>
+        </div>
+    </header>
+
+    <div class="content">
+        <div class="content-text">
+            <h1>The design school of the best UI/UX designer</h1>
+            <p>
+                An invite-only masterclass on becoming a UI/UX designer,
+                finding new opportunities for growth and levelling up your skills.
+            </p>
+            <div class="content-text-btn">
+                <a href="#">Find Us</a>
+                <h2>Enrolments for spring are closed. Application open fall 2024.</h2>
+            </div>
+        </div>
+
+        <!-- hero -->
+        <div class="content-hero">
+            <img src="img/Add notes-cuate.svg" alt="">
+        </div>
+    </div>
+
+    <div class="main">
+
+        
+    </div>
+
+
 </body>
 </html>
