--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Online Course</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/styles.css">
+    <script src="https://unpkg.com/feather-icons"></script>
 </head>
 <body>
     <!-- header -->
@@ -103,15 +104,47 @@
             
             <div class="card-6 card-all">
                 <h1>🤝</h1>
-                <h2>Life time network</h2>
+                <h2>Lifetime network</h2>
                 <p>
                     Participate in the community, get new opportunities and become a part
                     of the 10kDesginer Alumni Network 
                 </p>
             </div>
         </div>
-        
     </main>
 
+    <div class="section-1">
+        <div class="text">
+            <h2>Made For You</h2>
+            <h1>Mentorship and personal feedback</h1>
+            <p>
+                Design courses online often miss out one of the biggest
+                components of learning: feedback. Don't get stuck, receive real guidance
+            </p>
+
+            <div class="text-check">
+                <i data-feather="check"></i>
+                <p>Guidance in making career & design decisions.</p>
+            </div>
+            <div class="text-check">
+                <i data-feather="check"></i>
+                <p>Mentorship in how to grow as a designer.</p>
+            </div>
+            <div class="text-check">
+                <i data-feather="check"></i>
+                <p>Tracking your journey and always take care of you.</p>
+            </div>
+
+        </div>
+
+        <!-- hero -->
+        <img src="img/content-1.jpg" alt="">
+    </div>
+
+
+    <!-- feather -->
+    <script>
+        feather.replace();
+      </script>
 </body>
 </html>
