--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         </div>
     </div>
 
+    <!-- card -->
     <main class="main">
         <div class="header">
             <h1>Everthing You Need</h1>
