--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         </div>
     </main>
 
-    <div class="section">
+    <div class="section" id="section-1">
         <div class="text">
             <h2>Made For You</h2>
             <h1>Mentorship and personal feedback</h1>
@@ -166,7 +166,7 @@
     </div>
 
     <!-- section-3 -->
-    <div class="section">
+    <div class="section" id="section-3">
         <div class="text">
             <h2>EXPAND YOUR NETWORK</h2>
             <h1>Stories from the best & upcoming designer</h1>
