menambahkan main testimoni sedikit

--- a/index.html
+++ b/index.html
@@ -192,7 +192,76 @@
         <img src="img/content-3.jpg" alt="">
     </div>
 
-   
+   <!-- Program -->
+    <article>
+        <div class="header">
+            <h2>OUR PROGRAM</h2>
+            <h1>A private, community focussed masterclass</h1>
+            <p>
+                A flipped classroom model with a mix of live and recorded videos ensures
+                there's a good mix of discussion, peer learning & attention.
+            </p>
+        </div>
+
+        <!-- content -->
+         <div class="container">
+            <!-- hero -->
+            <div class="hero">
+                <img src="img/content-2.jpg" alt="">
+            </div>
+
+            <!-- content -->
+            <div class="content-pr">
+                <h1>WHAT YOU WILL LEARN</h1>
+                <div class="checklist">
+                    <i data-feather="check"></i>
+                    <p>How to design intuitive app & website from scratch</p>
+                </div>
+                <div class="checklist">
+                    <i data-feather="check"></i>
+                    <p>Fundamentals of color, layout, design process, visual design & prototyping</p>
+                </div>
+                <div class="checklist">
+                    <i data-feather="check"></i>
+                    <p>The tools of the trade including Figma, Webflow, ProtoPie etc.</p>
+                </div>
+                <div class="checklist">
+                    <i data-feather="check"></i>
+                    <p>Problem solving, working in a team and how to make data driven decision.</p>
+                </div>
+                <div class="checklist">
+                    <i data-feather="check"></i>
+                    <p>How to build a personal brand, grow your network, get project & make more money</p>
+                </div>
+                <div class="checklist">
+                    <i data-feather="check"></i>
+                    <p>How to develop website & and landing page in Webflow without writting code</p>
+                </div>
+                <div class="checklist">
+                    <i data-feather="check"></i>
+                    <p></p>
+                </div>
+                <div class="checklist">
+                    <i data-feather="check"></i>
+                    <p></p>
+                </div>
+                <div class="checklist">
+                    <i data-feather="check"></i>
+                    <p></p>
+                </div>
+                <div class="checklist">
+                    <i data-feather="check"></i>
+                    <p></p>
+                </div>
+
+
+            </div>
+
+
+
+         </div>
+
+    </article>
         
 
 
