--- a/index.html
+++ b/index.html
@@ -204,13 +204,13 @@
         </div>
 
         <!-- content -->
-         <div class="container">
+        <div class="container">
             <!-- hero -->
             <div class="hero">
                 <img src="img/content-2.jpg" alt="">
             </div>
 
-            <!-- content -->
+            <!-- content-primary-->
             <div class="content-pr">
                 <h1>WHAT YOU WILL LEARN</h1>
                 <div class="checklist">
@@ -239,27 +239,81 @@
                 </div>
                 <div class="checklist">
                     <i data-feather="check"></i>
-                    <p></p>
+                    <p>How to validate features, conduct competitive analysis & user research</p>
                 </div>
                 <div class="checklist">
                     <i data-feather="check"></i>
-                    <p></p>
+                    <p>How to communicate your design decisions to stakeholders</p>
                 </div>
                 <div class="checklist">
                     <i data-feather="check"></i>
-                    <p></p>
+                    <p>How to write effective case studies & build a portofolio that converts</p>
                 </div>
                 <div class="checklist">
                     <i data-feather="check"></i>
-                    <p></p>
+                    <p>How to find leads for freelance project, write proposals & converts clients</p>
                 </div>
-
-
+                <div class="checklist">
+                    <i data-feather="check"></i>
+                    <p>How to evaluate offers & increase the odds of getting into your top compannies</p>
+                </div>
+                
             </div>
 
+            <!-- side-content-2 -->
+            <div class="content-sc" id="content-2">
+                <h1>Foundation</h1>
+                <h2>Week 1 - Week 3</h2>
+                <p>
+                    This stage is your orientation: meeting your cohort mates, understanding,
+                    the history of design & getting your mindset and habits right. Learn the fundamentals of 
+                    visual design & Figma & get thrown head-first into your first design project.
+                    Receive feedback & iterate.
+                </p>
+            </div>
 
+            <!-- side-content-3 -->
+            <div class="content-sc" id="content-3">
+                <h1>Procces</h1>
+                <h2>Week - 4 - Week 6</h2>
+                <p>
+                    Beyond fundamentals, it's now time for framework. Understanding the design procces,
+                    mental models, research, metrics and product. A mix of case studies &
+                    in-depth assignment to apply theory to practice.
+                </p>
+            </div>
+            <!-- side-content-4 -->
+            <div class="content-sc" id="content-4">
+                <h1>Deep Skills</h1>
+                <h2>Week - 7 - Week 9</h2>
+                <p>
+                    With project and procces under your belt, get in to the depths of motion design
+                    and prototyping tools. Learn how to polish your visuals, advanced prototyping in ProtoPie,
+                    making website in Webflow and more. Test your skills with two design assigment
+                </p>
+            </div>
+            <!-- side-content-5 -->
+            <div class="content-sc" id="content-5">
+                <h1>Graduation</h1>
+                <h2>Week - 10 - Week 12</h2>
+                <p>
+                    Conceptualize your finals capstone project to apply everything you've learn. This stage also
+                    foccused on personal brand, preparing case studies with your projects so far and how to start finding opportunities 
+                    - freelance, intership & full time roles.
+                </p>
+            </div>
 
-         </div>
+            <!-- side-content-6 -->
+             <div class="content-sc" id="content-6">
+                <h1>Acceleration</h1>
+                <h2>Week 13 onwards...</h2>
+                <p>
+                    Congrats, you're designer now! This duration of the program will be foccused on 
+                    polishing your work and getting your opportunities. All members will receive interview prep,
+                    dedicated placement assistnace and coaching personally from me.
+                </p>
+             </div>
+        </div>
 
     </article>
         
