menambahkan responsive mobile pada roadmap

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
             </div>
 
             <!-- content-primary-->
-            <div class="content-pr">
+            <div class="content-pr" id="content-1">
                 <h1>WHAT YOU WILL LEARN</h1>
                 <div class="checklist">
                     <i data-feather="check"></i>
