menambahkan profile teacher

--- a/index.html
+++ b/index.html
@@ -314,9 +314,52 @@
                 </p>
              </div>
         </div>
-
     </article>
         
+
+    <!-- about teacher -->
+    <div class="profile">
+        <div class="hero"></div>
+
+        <!-- content -->
+        <div class="content">
+            <div class="header">
+                <h2>Meet Your Mentor</h2>
+                <h1>Hi, I'm Chris Voss.</h1>
+                <div class="link">
+                    <a href="#"><i data-feather="twitter"></i></a>
+                    <a href="#"><i data-feather="instagram"></i></a>
+                    <a href="#"><i data-feather="linkedin"></i></a>
+                    <a href="#"><i data-feather="facebook"></i></a>
+                    <a href="#"><i data-feather="youtube"></i></a>
+                </div>                
+            </div>
+
+            <!-- text -->
+            <div class="text">
+                <p>
+                    I got my start in design in 2012 designing IOS apps for freelance project
+                    on Odesk. Since then i've worked with 50+ founders and stratup across <span>WORLD</span>.
+                </p>
+                <p>
+                    I've been a stratup founder myself and co-founded a <span>music chat app called Lisn</span>
+                    that had its momment of virality with <span>8k+ users.</span>. Im also the author of the Amazon best
+                    seller <span>Pyjama profit</span>, a book about building a freelancing career.
+                </p>
+                <p>
+                    Most recently i was the <span>Head Of Design at Unacademy,</span> an ed-tech startup that has raised around <span>$200M</span> from global
+                    investor like <span>Sequioa Capital, Facebook, General Atlantic, Blum  Investor and Multichain Capital.</span>
+                </p>
+                <p>
+                    After spending 2 years there, building the design team for scratch & helping building
+                    one of the <span>Biggest live learning platform in the world.</span> I realized i want to fix the state of design
+                    education. I quit my job to build an education startup of my own - onw that enables the next generation
+                    of designer and product thinker. 
+                </p>
+            </div>
+        </div>
+
+    </div>
 
 
 
