menambahkan responsive ke desktop design dan menambah checkcircle

--- a/index.html
+++ b/index.html
@@ -124,15 +124,15 @@
             </p>
 
             <div class="text-check">
-                <i data-feather="check"></i>
+                <i data-feather="check-circle"></i>
                 <p>Guidance in making career & design decisions.</p>
             </div>
             <div class="text-check">
-                <i data-feather="check"></i>
+                <i data-feather="check-circle"></i>
                 <p>Mentorship in how to grow as a designer.</p>
             </div>
             <div class="text-check">
-                <i data-feather="check"></i>
+                <i data-feather="check-circle"></i>
                 <p>Tracking your journey and always take care of you.</p>
             </div>
 
@@ -155,11 +155,11 @@
             </p>
 
             <div class="text-check">
-                <i data-feather="check"></i>
+                <i data-feather="check-circle"></i>
                 <p>Feedback, support on all submission.</p>
             </div>
             <div class="text-check">
-                <i data-feather="check"></i>
+                <i data-feather="check-circle"></i>
                 <p>Continuous learning & upskill.</p>
             </div>
         </div>
@@ -176,15 +176,15 @@
             </p>
 
             <div class="text-check">
-                <i data-feather="check"></i>
+                <i data-feather="check-circle"></i>
                 <p>Discover new designers & their work.</p>
             </div>
             <div class="text-check">
-                <i data-feather="check"></i>
+                <i data-feather="check-circle"></i>
                 <p>Insights about problem solving, getting hired, career growth and more.</p>
             </div>
             <div class="text-check">
-                <i data-feather="check"></i>
+                <i data-feather="check-circle"></i>
                 <p>Remoting your work and result of the project.</p>
             </div>
         </div>
@@ -214,47 +214,47 @@
             <div class="content-pr" id="content-1">
                 <h1>WHAT YOU WILL LEARN</h1>
                 <div class="checklist">
-                    <i data-feather="check"></i>
+                    <i data-feather="check-circle"></i>
                     <p>How to design intuitive app & website from scratch</p>
                 </div>
                 <div class="checklist">
-                    <i data-feather="check"></i>
+                    <i data-feather="check-circle"></i>
                     <p>Fundamentals of color, layout, design process, visual design & prototyping</p>
                 </div>
                 <div class="checklist">
-                    <i data-feather="check"></i>
+                    <i data-feather="check-circle"></i>
                     <p>The tools of the trade including Figma, Webflow, ProtoPie etc.</p>
                 </div>
                 <div class="checklist">
-                    <i data-feather="check"></i>
+                    <i data-feather="check-circle"></i>
                     <p>Problem solving, working in a team and how to make data driven decision.</p>
                 </div>
                 <div class="checklist">
-                    <i data-feather="check"></i>
+                    <i data-feather="check-circle"></i>
                     <p>How to build a personal brand, grow your network, get project & make more money</p>
                 </div>
                 <div class="checklist">
-                    <i data-feather="check"></i>
+                    <i data-feather="check-circle"></i>
                     <p>How to develop website & and landing page in Webflow without writting code</p>
                 </div>
                 <div class="checklist">
-                    <i data-feather="check"></i>
+                    <i data-feather="check-circle"></i>
                     <p>How to validate features, conduct competitive analysis & user research</p>
                 </div>
                 <div class="checklist">
-                    <i data-feather="check"></i>
+                    <i data-feather="check-circle"></i>
                     <p>How to communicate your design decisions to stakeholders</p>
                 </div>
                 <div class="checklist">
-                    <i data-feather="check"></i>
+                    <i data-feather="check-circle"></i>
                     <p>How to write effective case studies & build a portofolio that converts</p>
                 </div>
                 <div class="checklist">
-                    <i data-feather="check"></i>
+                    <i data-feather="check-circle"></i>
                     <p>How to find leads for freelance project, write proposals & converts clients</p>
                 </div>
                 <div class="checklist">
-                    <i data-feather="check"></i>
+                    <i data-feather="check-circle"></i>
                     <p>How to evaluate offers & increase the odds of getting into your top compannies</p>
                 </div>
                 
@@ -358,7 +358,31 @@
                 </p>
             </div>
         </div>
+    </div>
 
+    <!-- pricing tag -->
+    <div class="price-tag">
+        <div class="header">
+            <h1>Program details</h1>
+            <h2>
+                This is a program with built-in accountability, guidance and personal
+                and personal mentorship from the mentor to unlock your full potential.
+            </h2>
+        </div> 
+        <!-- price card -->
+         <div class="price-card">
+            <!-- card-1 -->
+            <div class="card-1">
+                <h2>WHAT YOU'LL GET</h2>
+
+                <div class="check-container">
+                    <div class="checklist">
+                        <i data-feather="check"></i>
+                    </div>
+                </div>
+            </div>
+
+         </div>
     </div>
 
 
