menambahkan price tag

--- a/index.html
+++ b/index.html
@@ -370,19 +370,67 @@
             </h2>
         </div> 
         <!-- price card -->
-         <div class="price-card">
+        <div class="price-card">
             <!-- card-1 -->
             <div class="card-1">
                 <h2>WHAT YOU'LL GET</h2>
-
+                <!-- check container -->
                 <div class="check-container">
                     <div class="checklist">
-                        <i data-feather="check"></i>
+                        <i data-feather="check-circle"></i>
+                        <p>
+                            1:1 personalized mentorship and guidance on building fulfilling design career
+                        </p>
                     </div>
+                    <div class="checklist">
+                        <i data-feather="check-circle"></i>
+                        <p>
+                            Admission into the upcoming cohort of designers, access to curriculum & training
+                        </p>
+                    </div>
+                    <div class="checklist">
+                        <i data-feather="check-circle"></i>
+                        <p>
+                            One year complementary subscription to UI Source Pro (Worth IDR.250K)
+                        </p>
+                    </div>    
+                    <div class="checklist">
+                        <i data-feather="check-circle"></i>
+                        <p>
+                            Exclusive invites to physical meetups & event in our network
+                        </p>
+                    </div>
+                    <div class="checklist">
+                        <i data-feather="check-circle"></i>
+                        <p>
+                            Exclusive freebies and discounted licenses form our Partners
+                        </p>
+                    </div>
+                    
+                        
                 </div>
             </div>
 
-         </div>
+            <!-- card 2 -->
+            <div class="card-2">
+                <h1>Join Now</h1>
+                <div class="price-container">
+                    <h2>$75</h2>
+                    <h3>IDR.1.224.000</h3>
+                </div>
+                <h4>Price may be subject to change for future cohorts</h4>
+                <p>
+                    The spring 2020 Cohort is currently underway. Fill out this form to be notified about the next
+                    batch that will open sometimes in fall 2020 (Sep-Oct)
+                </p>
+                <div class="footer">
+                    <a href="#">Join Now !</a>
+                    <p>The acceptance rate is currently under 10%. Please take your time in filling out the application.</p>
+                </div>
+            </div>
+
+
+        </div>
     </div>
 
 
@@ -392,4 +440,4 @@
         feather.replace();
       </script>
 </body>
-</html>
+</html> 
