menambahkan question card pada html

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         </div>
 
         <div class="nav">
-            <a href="">Masterclass</a>
-            <a href="">Community</a>
-            <a href="">Podcast</a>
+            <a href="#masterclass">Masterclass</a>
+            <a href="">Roadmap</a>
+            <a href="">Common Question</a>
         </div>
     </header>
 
@@ -42,7 +42,7 @@
     </div>
 
     <!-- card -->
-    <main class="main">
+    <main class="main" id="masterclass">
         <div class="header">
             <h1>Everthing You Need</h1>
             <h2>Succed as a designer</h2>
@@ -428,10 +428,144 @@
                     <p>The acceptance rate is currently under 10%. Please take your time in filling out the application.</p>
                 </div>
             </div>
-
-
         </div>
     </div>
+
+    <!-- Question card -->
+    <div class="question-card">
+        <!-- card-1 -->
+        <div class="card-1">
+            <h1>Frequently asked question</h1>
+            <p>
+                If you have any question about the program that aren't covered here, email me at gilangpradnyana1@agmail.com 
+                and i'll get in touch
+            </p>
+         </div>
+        
+        <!-- card-2 -->
+        <div class="card-all" id="card-2">
+            <h1>Who is this course for?</h1>
+            <p>
+                This course is for thoose who want to learn UI/UX design to transition into a new career or to build an additional skill.
+                Wether you're a student, engineer, product manager, quality control or anyone else
+            </p>
+        </div>
+
+        <!-- card-3 -->
+        <div class="card-all" id="card-3">
+            <h1>How do i apply for the course?</h1>
+            <p>
+                The course has limited seats, so please take some time to fill out your application and answer the questions to your bes ability.
+                There might be an interview call with me to assess if you're ready for the program.
+            </p>
+        </div>
+
+        <!-- card-4 -->
+        <div class="card-all" id="card-4">
+            <h1>How much will the course cost overall?</h1>
+            <p>
+                The couse wil cost $75 (IDR.1.224.000) wich needs to be paid upfront before the start of the course. There are also 3mo, 6mo
+                and 12mo EMI options avilable offered by Paypall.
+            </p>
+        </div>
+
+        <!-- card-5 -->
+        <div class="card-all" id="card-5">
+            <h1>How much time do i need to dedicate every week?</h1>
+            <p>
+                The curriculum has been design to allow people participate part-time. However you must be able to dedicate a minimum of 5-6
+                hours every week based on the work to watch the session and submit your assignment on time. 
+            </p>
+        </div>
+
+        <!-- card-6 -->
+        <div class="card-all" id="card-6">
+            <h1>Can i do this course at my own pace?</h1>
+            <p>
+                The course requires you to watch the live classes and make assignment on time every week. So no, the course can't be done
+                at your pace 
+            </p>
+        </div>
+
+        <!-- card-7 -->
+        <div class="card-all" id="card-7">
+            <h1>What if i miss a live session?</h1>
+            <p>
+                You are encouraged to watch the session live to keep up with the curriculum but if you're unable to attend, class recordings
+                are available for every class.
+            </p>
+        </div>
+
+        <!-- card-8 -->
+        <div class="card-all" id="card-8">
+            <h1>Will i be guaranteed a job after graduating the course?</h1>
+            <p>
+                The training and community is designed to increase your odds of getting roles. I can't guarantee success but you will receive
+                personal coaching from me that will help you build a portofolio and confidently apply for internship, freelane and full-time roles  
+            </p>
+        </div>
+
+        <!-- card-9 -->
+        <div class="card-all" id="card-9">
+            <h1>Can i cancel or apply for a refund?</h1>
+            <p>If you not happy with the course within the first 7 days, you will receive a full refund.</p>
+        </div>
+
+        <!-- card-10 -->
+        <div class="card-all" id="card-10">
+            <h1>Will i get a certificate on completing the course?</h1>
+            <p>
+                Yes, you will receive a certificate on completion of the course. However, the skills you build are the what will unlock
+                opportunities for you, not for the certificate.
+            </p>
+        </div>
+
+        <!-- card-11 -->
+        <div class="card-all" id="card-11">
+            <h1>Where are the classes conducted?</h1>
+            <p>
+                All course instruction will be online and all you need is an internet connection to watch the videos. However there might be
+                physical meetups post COVID, wich are optional to attend and the cost will have to be borne by you.
+            </p>
+        </div>
+
+        <!-- card-12 -->
+        <div class="card-all" id="card-12">
+            <h1>What computer specs and software for I need for the course?</h1>
+            <p>
+                You need a Mac or Windows computer capable of running a web browse.
+                Figma will be the primary application in this course.                
+            </p>
+        </div>
+
+        <!-- card-13 -->
+        <div class="card-all" id="card-13">
+            <h1>Do I need to know programming?</h1>
+            <p>
+                No, you don't need to know programming or be a Science or Computer Science graduated to do this course. The web
+                development you will learn will be using <u>WebFLow.</u> a no-code visual development tool. 
+            </p>
+        </div>
+
+        <!-- card-14 -->
+        <div class="card-all" id="card-14">
+            <h1>Can i apply if im a Student?</h1>
+            <p>
+                Yes, you can apply even if you're school or college student. Your focus will be to learn how to apply for internship
+                and freelance project. 
+            </p>
+        </div>
+
+        <!-- card-15 -->
+        <div class="card-all" id="card-3">
+            <h1>How do i know if UI/UX design is right for me</h1>
+            <p>
+                UI/UX design might be the choiche for you if you're interested in the intersection of design, technology and business. You want to work
+                in the tech industry and want to build products for web and mobile. Check out my free videos on Instagram.
+            </p>
+        </div>
+    </div>
+
 
 
 
