--- a/index.html
+++ b/index.html
@@ -569,6 +569,18 @@
         
     </div>
 
+    <!-- footer -->
+    <footer>
+        <h1><span>Re</span> Design</h1>
+        <div class="link">
+            <a href="#">About</a>
+            <a href="#">Terms & Condition</a>
+            <a href="#">Privacy Police</a>
+            <a href="#">Refund Policy</a>
+            <a href="#">Contact</a>
+        </div>
+       
+    </footer>
 
 
 
