--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
         <div class="header">
             <h1>Frequently asked question</h1>
             <p>
-                If you have any question about the program that aren't covered here, email me at gilangpradnyana1@agmail.com 
+                If you have any question about the program that aren't covered here, email me at gilangpradnyana1@gmail.com 
                 and i'll get in touch
             </p>
          </div>
