--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
         <div class="nav">
             <a href="#masterclass">Masterclass</a>
-            <a href="">Roadmap</a>
-            <a href="">Common Question</a>
+            <a href="#roadmap">Roadmap</a>
+            <a href="#common-question">Common Question</a>
         </div>
     </header>
 
@@ -193,7 +193,7 @@
     </div>
 
    <!-- Program -->
-    <article>
+    <article id="roadmap">
         <div class="header">
             <h2>OUR PROGRAM</h2>
             <h1>A private, community focussed masterclass</h1>
@@ -432,7 +432,7 @@
     </div>
 
     <!-- Question card -->
-    <div class="question-card">
+    <div class="question-card" id="common-question">
         <!-- header -->
         <div class="header">
             <h1>Frequently asked question</h1>
