--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="nav">
             <a href="#masterclass">Masterclass</a>
             <a href="#roadmap">Roadmap</a>
-            <a href="#common-question">Common Question</a>
+            <a href="#common-question">Question</a>
         </div>
     </header>
 
